# sg32

./: .gitignore  00-preface.html  01-dream.html  02-gossip-protocol.html  03-starting-point.html  04-debugging-journey.html  05-wire-format.html  06-devnet-conversation.html  07-change-log.html  08-still-wrong.html  09-how-to-run.html  10-reference-files.html  404.html  90-appendix.html  Cargo.toml  FUTURE.md  POPULARITY_STRATEGIES.md  README.md  USE_CASES.md  print.html  searcher-09f2665d.js  searchindex-e7474215.js  searchindex-f42f374c.js  session_o_cnow.md  toc-0021db9f.js  toc-20dfe18e.js  toc.html  why_build_this.md
.github/workflows/: pages.yml
app/: index.html
crates/: test_version.rs
crates/dc-gossip/: Cargo.toml  GOSSIP_DETAILS.md
crates/dc-gossip/logs/: main-logs.txt
crates/dc-gossip/src/: contact_info.rs  crds.rs  crds_data.rs  crds_filter.rs  emitter.rs  gossip_design.md  handler.rs  ip_echo.rs  legacy_contact_info.rs  lib.rs  main.rs  ping_pong.rs  protocol.rs  pull_request.rs  short_vec.rs
crates/dc-tvu/: BUILD_LOG.md  Cargo.toml  PIPELINE_DESIGN.md  TVU_DESIGN.md
crates/dc-tvu/src/: deshredder.rs  fec_batch.rs  flat_file_store.rs  gf256.rs  lib.rs  main.rs  merkle_prover.rs  reed_solomon.rs  repair.rs  ring_buffer.rs  rpc_server.rs  shred.rs  shred_header.rs  stats.rs
docs/: book.toml
docs/book/: 04-debugging-journey.html  10-reference-files.html  searcher-c2a407aa.js  toc.html
docs/src/: 00-preface.md  01-dream.md  02-gossip-protocol.md  03-starting-point.md  04-debugging-journey.md  05-wire-format.md  06-devnet-conversation.md  07-change-log.md  08-still-wrong.md  09-how-to-run.md  10-reference-files.md  90-appendix.md  SUMMARY.md
logs/: main-logs.txt
scripts/: setup-oracle.sh
sdk/: package.json
sdk/src/: index.ts
