[package]
name = "dc-tvu"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dc-tvu"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
serde_bytes = "0.11"
sha2 = "0.10"
ed25519-dalek = "2.2.0"
rand = "0.8"
dc-gossip = { path = "../dc-gossip" }
